--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -43,7 +43,6 @@
 %================================
 % C.新命令定义
 %================================
-
 %\newcommand{OutputListing}[]{
 %}
 
@@ -68,6 +67,8 @@
 %================================
 \input{note_everyday/000_latex_note/latex_note}
 \input{note_everyday/001_20200302/note_at_20300302}
+\input{note_everyday/004_20200305/note_at_20300305}
+\input{note_everyday/005_20200306/note_at_20300306}
 \input{note_everyday/005_20200316/note_at_20200316}
 
 
