--- a/note_everyday/000_latex_note/latex_note.tex
+++ b/note_everyday/000_latex_note/latex_note.tex
@@ -34,3 +34,11 @@
 \end{figure}
 
 \end{lstlisting}
+
+
+4.特殊符号
+\begin{lstlisting}[]
+\# \$ \% \& \{ \} \_
+\^{} \~{} \textbackslash
+--> # $ % & { } _ ^ ~ \
+\end{lstlisting}
