--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -4,9 +4,17 @@
 \usepackage{ctex}
 \usepackage{listings}
 \usepackage{xcolor}
+%\usepackage{xecolor}
 \usepackage{graphicx}
+\usepackage{geometry}
 \usepackage{hyperref} %生成书签
 
+%================================
+% A.页面颜色
+%================================
+\definecolor{mypagecolor}{rgb}{0.78, 0.92, 0.8}
+\pagecolor{mypagecolor}
+\geometry{left=3.0cm, right=3.0cm, top=2.5cm, bottom=2.5cm}
 %================================
 % A.PDF标签
 %================================
@@ -70,6 +78,10 @@
 \input{note_everyday/004_20200305/note_at_20300305}
 \input{note_everyday/005_20200306/note_at_20300306}
 \input{note_everyday/005_20200316/note_at_20200316}
+\input{note_everyday/007_20200318/note_at_20200318}
+\input{note_everyday/008_20200323/note_at_20200323}
+\input{note_everyday/009_20200324/note_at_20200324}
+\input{note_everyday/010_20200325/note_at_20200325}
 
 
 \end{document}
