--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -82,6 +82,7 @@
 \input{note_everyday/008_20200323/note_at_20200323}
 \input{note_everyday/009_20200324/note_at_20200324}
 \input{note_everyday/010_20200325/note_at_20200325}
+\input{note_everyday/011_20200406/note_at_20200406}
 
 
 \end{document}
