--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -83,6 +83,7 @@
 \input{note_everyday/009_20200324/note_at_20200324}
 \input{note_everyday/010_20200325/note_at_20200325}
 \input{note_everyday/011_20200406/note_at_20200406}
+\input{note_everyday/012_20200409/note_at_20200409}
 
 
 \end{document}
