--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -84,6 +84,7 @@
 \input{note_everyday/010_20200325/note_at_20200325}
 \input{note_everyday/011_20200406/note_at_20200406}
 \input{note_everyday/012_20200409/note_at_20200409}
+\input{note_everyday/013_20200411/note_at_20200411}
 
 
 \end{document}
