--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -85,6 +85,7 @@
 \input{note_everyday/011_20200406/note_at_20200406}
 \input{note_everyday/012_20200409/note_at_20200409}
 \input{note_everyday/013_20200411/note_at_20200411}
+\input{note_everyday/014_20200518/note_at_20200518}
 
 
 \end{document}
