--- a/zhiye_note.tex
+++ b/zhiye_note.tex
@@ -87,6 +87,7 @@
 \input{note_everyday/013_20200411/note_at_20200411}
 \input{note_everyday/014_20200518/note_at_20200518}
 \input{note_everyday/015_20200520/note_at_20200520}
+\input{note_everyday/016_20200601/note_at_20200601}
 
 \end{document}
 
