--- a/002_latex_note/latex_note.tex
+++ b/002_latex_note/latex_note.tex
@@ -19,25 +19,25 @@
 
 
 \subsection{在正文中强调某个词语}
-我要\command{强abc调}这个词语。
+我要\emphasizebox{强abc调}这个词语。
 
 \subsection{插入Linux命令}
-\begin{cmd}
+\begin{commandbox}
  > sudo chsh -s zsh
-\end{cmd}
+\end{commandbox}
 
 \subsection{用数字表示一个范围}
 我要表示一个范围：$18\sim22$ 岁。
 
 \subsection{插入一个Linux信息输出框}
-\begin{code}
+\begin{messagebox}
 On branch master
 Your branch is ahead of 'origin/master' by 3 commits.
   (use "git push" to publish your local commits)
 Changes not staged for commit:
   (use "git add <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)
-\end{code}
+\end{messagebox}
 
 \subsection{测试codeout}
 \begin{codeout}
