--- a/001_latex_env/latex_env.tex
+++ b/001_latex_env/latex_env.tex
@@ -113,3 +113,15 @@ coltext=black
     pdfkeywords={LaTex, note},
 }
 
+%==========================================
+% 摘抄格式
+%==========================================
+\newenvironment{literbox}
+%{\begin{messagebox}
+{\begin{quote}\zihao{-3}\kaishu
+%{\zihao{-3}\kaishu
+}
+%{\end{messagebox}}
+{\end{quote}}
+%{}
+
