--- a/git.tex
+++ b/git.tex
@@ -54,6 +54,10 @@
 %==========================================
 \input{002_latex_note/latex_note}
 \input{003_git_note/git_note}
+\input{004_vim_note/vim_note}
+\input{005_protocol_note/protocol_note}
+
+\input{006_literature_note/literature_note}
 
 
 \end{document}
