--- a/005_protocol_note/protocol_note.tex
+++ b/005_protocol_note/protocol_note.tex
@@ -3,3 +3,4 @@
 \input{005_protocol_note/uart_protocol}
 \input{005_protocol_note/spi_protocol}
 \input{005_protocol_note/bluetooth_protocol}
+\input{005_protocol_note/usb_protocol}
