--- a/git.tex
+++ b/git.tex
@@ -17,7 +17,7 @@
 \usepackage{tcolorbox}
 \usepackage{hyperref} % This line is readily ommited of it makes trouble
 \tcbuselibrary{breakable,listings,skins,fitting}
-\graphicspath{{figure/}}
+\graphicspath{{figure/}, {005_protocol_note/bt_picture/}}
 \usepackage{newenviron}
 
 \input{001_latex_env/latex_env}
@@ -58,6 +58,8 @@
 \input{005_protocol_note/protocol_note}
 
 \input{006_literature_note/literature_note}
+\input{007_complier_note/complier_note}
+\input{008_system_work_note/system_work_note}
 
 
 \end{document}
