[dev]: add software chatper;

--- a/git.tex
+++ b/git.tex
@@ -60,6 +60,7 @@
 \input{006_literature_note/literature_note}
 \input{007_complier_note/complier_note}
 \input{008_system_work_note/system_work_note}
+\input{009_soft_install_note/soft_install_note}
 
 
 \end{document}
