[dev]: add gvim note;

--- a/001_latex_env/latex_env.tex
+++ b/001_latex_env/latex_env.tex
@@ -125,3 +125,10 @@ coltext=black
 {\end{quote}}
 %{}
 
+%==========================================
+% 图片路径
+%==========================================
+\graphicspath{{figure/}, 
+{005_protocol_note/bt_picture/}, 
+{009_soft_install_note/gvim_install_picture/}, 
+}
