--- a/003_git_note/git_note.tex
+++ b/003_git_note/git_note.tex
@@ -249,5 +249,26 @@ repo命令：
 ± repo forall -c git checkout 'master@{2020-07-15 12:44}'
 \end{commandbox}
 
+\subsection{GIT配置}
+\item git全局配置，使用命令：
+\begin{commandbox}
+$ git config --global user.email "mozhiye@outlook.com" 
+$ git config --global user.name "mozhiye"
+$ git config --global alias.st "status"
+$ git config --global alias.co "checkout"
+$ git config --global core.editor vim
+\end{commandbox}
+
+\item 查看git全局配置，打开文件\emphasizebox{./gitconfig}
+\begin{messagebox}
+[user]
+        email = mozhiye@outlook.com
+        name = mozhiye
+[alias]
+        st = status
+        co = checkout
+[core]
+        editor = vim
+\end{messagebox}
 
 \end{itemize}
