--- a/001_latex_env/latex_env.tex
+++ b/001_latex_env/latex_env.tex
@@ -131,4 +131,5 @@ coltext=black
 \graphicspath{{figure/}, 
 {005_protocol_note/bt_picture/}, 
 {009_soft_install_note/gvim_install_picture/}, 
+{008_system_work_note/system_note_picture/}, 
 }
