[dev]: add system note;

--- a/001_latex_env/latex_env.tex
+++ b/001_latex_env/latex_env.tex
@@ -89,14 +89,14 @@ coltext=black
 \lstnewenvironment{myccode}
 {\lstset{
     numbers=left,
-    numberstyle={\color{lightgray}},
-    frame=none, %无边框
+    %numberstyle={\color{lightgray}},
+    %frame=none, %无边框
     language={[ANSI]C},
     breaklines=true, %自动分行
-    keywordstyle={\color{blue}}, %关键词颜色
+    %keywordstyle={\color{blue}}, %关键词颜色
     %stringstyle={\color{orange}}, %字符串颜色
-    stringstyle={\color{magenta}}, %字符串颜色
-    commentstyle={\color{green}}, %注释颜色
+    %stringstyle={\color{magenta}}, %字符串颜色
+    %commentstyle={\color{green}}, %注释颜色
     %basicstyle={\color[black]}, %普通字符串颜色
     captionpos=b,
         }
