--- a/002_latex_note/latex_note.tex
+++ b/002_latex_note/latex_note.tex
@@ -54,7 +54,7 @@ void main ()
 \end{lstlisting}
 
 \subsection{测试mycode}
-\begin{myccode}
+\begin{myccode}[caption={hello工程}]
 /* 这是一个hello工程 */
 void main ()
 {
