--- a/004_vim_note/vim_note.tex
+++ b/004_vim_note/vim_note.tex
@@ -1,1 +1,7 @@
 \section{VIM学习笔记}
+
+\subsection{删除不符合指定格式的行}
+当需要删除不符合指定格式的行时，需要命令, 指令格式\emphasizebox{RES = }：
+\begin{messagebox}
+:v/RES = /d
+\end{messagebox}
