--- a/git.tex
+++ b/git.tex
@@ -26,7 +26,7 @@
 %==========================================
 \title{工作笔记}
 \author{莫志烨}
-\company{杰理科技}
+\company{纯属个人}
 \confidential{\textbf{-- 非限制发布 --}}
 
 %==========================================
