--- a/001_latex_env/latex_env.tex
+++ b/001_latex_env/latex_env.tex
@@ -136,3 +136,11 @@ coltext=black
 {009_soft_install_note/gvim_install_picture/}, 
 {008_system_work_note/system_note_picture/}, 
 }
+
+%==========================================
+% 水印
+%==========================================
+%\usepackage{draftwatermark}
+%\SetWatermarkText{Zero Note} % the Text
+%\SetWatermarkLightness{0.9} % the lightness from 0 to 1, default 0.8
+%\SetWatermarkScale{1.0} % the scale, default 1.2
