--- a/git.tex
+++ b/git.tex
@@ -1,4 +1,5 @@
-\documentclass{hitec}
+%\documentclass{hitec}
+\documentclass{myhitec}
 \usepackage[UTF8]{ctex}
 \usepackage{fontspec}
 \usepackage[dvipsnames]{xcolor}
@@ -18,6 +19,10 @@
 \usepackage{hyperref} % This line is readily ommited of it makes trouble
 \tcbuselibrary{breakable,listings,skins,fitting}
 \usepackage{newenviron}
+
+%\usepackage{changepage}
+%\begin{adjustwidth}{2cm}{1cm}
+%\end{adjustwidth}
 
 \input{001_latex_env/latex_env}
 
