[report]: fix make;

--- a/report.tex
+++ b/report.tex
@@ -57,7 +57,7 @@
 % 图片路径
 %==========================================
 \graphicspath{{figure/},
-{002_tdm_note/figure}, 
+{002_tdm_note/figure/},
 }
 
 %==========================================
