--- a/git.tex
+++ b/git.tex
@@ -54,6 +54,15 @@
 \newpage
 
 %==========================================
+% 图片路径
+%==========================================
+\graphicspath{{figure/},
+{005_protocol_note/bt_picture/}, 
+{009_soft_install_note/gvim_install_picture/},
+{008_system_work_note/system_note_picture/},
+}
+
+%==========================================
 % 章节内容
 %==========================================
 \input{002_latex_note/latex_note}
