[dev]: add latex color;

--- a/002_latex_note/latex_note.tex
+++ b/002_latex_note/latex_note.tex
@@ -148,4 +148,10 @@ AB^2 = BC^2 + AC^2
 忽略每行前面的空格，后面的空格多个当成一个，\TeX\ ing，\TeX{} ing. {\TeX} ing. 换行当空格I 
 am Tex.汉字和字母自动添加空格tex。
 
-
+\subsection{\LaTeX 颜色}
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.7]{latex_color.jpg}
+\caption{\LaTeX 颜色}
+\label{fig:latex color}
+\end{figure}
