--- a/git.tex
+++ b/git.tex
@@ -57,7 +57,8 @@
 % 图片路径
 %==========================================
 \graphicspath{{figure/},
-{005_protocol_note/bt_picture/}, 
+{002_latex_note/picture/},
+{005_protocol_note/bt_picture/},
 {009_soft_install_note/gvim_install_picture/},
 {008_system_work_note/system_note_picture/},
 }
