[dev]: add title & content;

--- a/002_latex_note/latex_note.tex
+++ b/002_latex_note/latex_note.tex
@@ -155,3 +155,13 @@ am Tex.汉字和字母自动添加空格tex。
 \caption{\LaTeX 颜色}
 \label{fig:latex color}
 \end{figure}
+
+%\section{段落级别：section}
+\subsection{段落级别：subsection}
+这是第二级别段落；
+\subsubsection{段落级别：subsubsection}
+这是第三级别段落；
+\paragraph{段落级别：paragraph}
+这是第四级别段落；
+\subparagraph{段落级别：subparagraph}
+这是第五级别段落；
