--- a/report.tex
+++ b/report.tex
@@ -39,6 +39,7 @@
 %==========================================
 \begin{document}
 \begin{titlepage}
+\pdfbookmark[1]{标题页}{title}
 \maketitle
 %这是一篇关于\LaTeX 的文档，风格使用 \HT 。
 \end{titlepage}
@@ -49,6 +50,7 @@
 %\end{abstract}
 %提示：获取本文档的最新版本比现在开始阅读更重要。
 %本文的最新版本见于：\url{https://git.coding.net/yangdawei/git.git}
+\pdfbookmark[1]{目录}{contents}
 \tableofcontents
 \newpage
 \newpage
