[dev]: add footnote;

--- a/001_latex_env/latex_env.tex
+++ b/001_latex_env/latex_env.tex
@@ -26,6 +26,8 @@
 % 自定义命令设置
 %==========================================
 \newcommand{\urllink}[2]{\href{#1}{#2}}
+\newcommand{\myfootnote}[1]{\footnote{\textcolor{blue}{#1}}}
+\newcommand{\myurlfootnote}[2]{\href{#1}{#2}{\footnote{\textcolor{blue}{#1}}}}
 
 \newcommand{\HT}{\textsc{\raisebox{0.1em}{H}\raisebox{-0.1em}{I}%
 	\raisebox{0.1em}{T}\raisebox{-0.1em}{E}\raisebox{0.1em}{C} }}
