--- a/002_latex_note/latex_note.tex
+++ b/002_latex_note/latex_note.tex
@@ -75,6 +75,8 @@ void main ()
 
 \subsection{脚注命令}
 苦\footnote{\emph 苦，是人生的必经过程。}
+苦\myfootnote{苦，是人生的必经过程。}
+\myurlfootnote{www.baidu.com}{苦}
 
 \subsection{引用}
 \begin{quote}
