[report]: add foot note;

--- a/002_tdm_note/tdm_note.tex
+++ b/002_tdm_note/tdm_note.tex
@@ -9,7 +9,7 @@
 \begin{messagebox}
 BR30_tdm_test_download.zip
 \end{messagebox}
-\item 骨传导传感器\href{https://www.st.com/resource/en/datasheet/lis25ba.pdf}{LIS25BA规格书};
+\item 骨传导传感器\myurlfootnote{https://www.st.com/resource/en/datasheet/lis25ba.pdf}{LIS25BA规格书};
 \end{itemize}
 
 \subsection{关于测试环境相关驱动文件组成}
