[dev]: add voa article;

--- a/git.tex
+++ b/git.tex
@@ -63,6 +63,7 @@
 {005_protocol_note/bt_picture/},
 {009_soft_install_note/gvim_install_picture/},
 {008_system_work_note/system_note_picture/},
+{010_voa_article/voa_picture/},
 }
 
 %==========================================
@@ -77,6 +78,7 @@
 \input{007_complier_note/complier_note}
 \input{008_system_work_note/system_work_note}
 \input{009_soft_install_note/soft_install_note}
+\input{010_voa_article/voa_article}
 
 
 \end{document}
