[dev]: add iis, complicer;

--- a/002_latex_note/latex_note.tex
+++ b/002_latex_note/latex_note.tex
@@ -114,7 +114,7 @@ AB^2 = BC^2 + AC^2
 %\begin{figure}[ht]
 \begin{figure}[H]
 \centering
-\includegraphics[height=5cm]{testcode.jpg}
+\includegraphics[scale=0.7]{testcode.jpg} %下划线不用斜杠
 \caption{建立项目}
 \label{fig:createproject}
 \end{figure}
