--- a/005_protocol_note/protocol_note.tex
+++ b/005_protocol_note/protocol_note.tex
@@ -2,5 +2,6 @@
 \input{005_protocol_note/iic_protocol}
 \input{005_protocol_note/uart_protocol}
 \input{005_protocol_note/spi_protocol}
+\input{005_protocol_note/iis_protocol}
 \input{005_protocol_note/bluetooth_protocol}
 \input{005_protocol_note/usb_protocol}
