--- a/git.tex
+++ b/git.tex
@@ -61,7 +61,9 @@
 \graphicspath{{figure/},
 {002_latex_note/picture/},
 {005_protocol_note/bt_picture/},
+{005_protocol_note/iis_picture/},
 {009_soft_install_note/gvim_install_picture/},
+{007_complier_note/picture/},
 {008_system_work_note/system_note_picture/},
 {010_voa_article/voa_picture/},
 }
