--- a/git.tex
+++ b/git.tex
@@ -19,6 +19,7 @@
 \usepackage{hyperref} % This line is readily ommited of it makes trouble
 \tcbuselibrary{breakable,listings,skins,fitting}
 \usepackage{newenviron}
+\usepackage{tikz}
 
 %\usepackage{changepage}
 %\begin{adjustwidth}{2cm}{1cm}
